# z1m

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
assets/pre/: manifest.json
assets/pre/annotations/: 01 - Link.annotations.json
assets/sprites/enemies/: moblin_red_down.json
assets/sprites/link/: shield_down.json
content/: overworld_q1.txt
docs/: README.md  game-scope.md  multiplayer-model.md
docs/main/: README.md  architecture.md  content-assembly-checklist.md  debug-tools.md  dungeon-catalog.md  enemy-catalog.md  item-catalog.md  nes-rom-offsets.md  open-questions.md  overworld-data.md  overworld-debug-status.md  project-goals.md  reference-policy.md  roadmap.md  script-catalog.md
refs/: links.txt
src/app/: app_config.hpp  app_state.hpp  input_state.hpp  main.cpp  run.cpp  run.hpp
src/content/: opening_content.cpp  opening_content.hpp  overworld_warps.cpp  overworld_warps.hpp  sandbox_content.cpp  sandbox_content.hpp  world_data.cpp  world_data.hpp
src/debug/: debug_ui.cpp  debug_ui.hpp
src/game/: area_data.hpp  area_state.cpp  area_state.hpp  areas.cpp  areas.hpp  combat.cpp  combat.hpp  enemy_boss.cpp  enemy_boss_dodongo_gohma.cpp  enemy_core.cpp  enemy_ground.cpp  enemy_jumpers.cpp  enemy_state.cpp  enemy_state.hpp  enemy_ticks.hpp  enemy_underworld.cpp  enemy_update.cpp  enemy_wizzrobes.cpp  entities.hpp  entity_names.cpp  entity_names.hpp  game_session.cpp  game_session.hpp  game_session_combat.inc  game_session_enemy_boss.inc  game_session_enemy_core.inc  game_session_enemy_ground.inc  game_session_enemy_tick.inc  game_session_items.inc  game_session_pickups.inc  game_session_runtime.inc  game_session_shared.inc  game_state.hpp  game_update.cpp  geometry.cpp  geometry.hpp  items.cpp  items.hpp  npcs.cpp  npcs.hpp  (+13 more)
src/game/enemies/: boss.cpp  boss_dodongo_gohma.cpp  core.cpp  ground.cpp  jumpers.cpp  state.cpp  state.hpp  ticks.hpp  underworld.cpp  update.cpp  wizzrobes.cpp
src/render/: camera.cpp  camera.hpp  debug_tileset.cpp  debug_tileset.hpp  scene_renderer.cpp  scene_renderer.hpp  sprite_assets.cpp  sprite_assets.hpp  sprite_visuals.cpp  sprite_visuals.hpp
tools/: export_overworld_png.py  extract_overworld.py  extract_sprite_assets.py
tools/annotator/: annotator_annotations.js  annotator_common.js  annotator_gallery.js  app.js  index.html  server.py  styles.css
